# premiere-pro-cmake-plugin

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Dockerfile.base  LICENSE-APACHE  LICENSE-MIT  MultiCPackConfig.cmake  README.md  README.txt  Welcome.txt  ppConfig.h.in
.github/workflows/: build-and-test.yml
src/: configure.h.in
src/common/: CMakeLists.txt  logger.cpp  logger.h  logger_test.c
src/pp-plugin/: CMakeLists.txt  ExportController.cpp  ExportController.h
src/standalone/: CMakeLists.txt  main.c
src/versions/: CMakeLists.txt  logger.h  versions.c  versions.h  versions_export.h  versions_test.c
